test/bad/usebeforedecl.spkt.expected
Error at test/bad/usebeforedecl.spkt:2.2: Variable `a` not declared.
Error at test/bad/usebeforedecl.spkt:7.6: Variable `b` not declared.
Error at test/bad/usebeforedecl.spkt:7.8: Cannot add unknown type and int8
Error at test/bad/usebeforedecl.spkt:7.4: Cannot assign unknown type to int32
